--- a/projects/com.ibm.cicsdev.sqlj.web/.classpath
+++ b/projects/com.ibm.cicsdev.sqlj.web/.classpath
@@ -9,12 +9,12 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="src" path="SQLJJavaSource"/>
-	<classpathentry kind="con" path="com.ibm.cics.explorer.sdk.web.LIBERTY_LIBRARIES/L.855/V.52"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="var" path="SQLJ_JAR"/>
+	<classpathentry kind="con" path="com.ibm.cics.explorer.sdk.web.LIBERTY_LIBRARIES/L./V.53/CL.53"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
